# pty

./: AUTHORS  ChangeLog  Makefile.am  README.md  configure.ac
man/: Makefile.am  pty.1
src/: Makefile.am  pty.c
